# zephyr_h753zi

./: .envrc  .gitignore  .gitmodules  README.md  STATUS.md  ihm02a1_plan.md  settings.json
.github/workflows/: ci.yml
apps/stm32h753zi_stepper/: CMakeLists.txt  Kconfig  fstab.overlay  nucleo_h753zi.overlay  prj.conf  stepper_models.yml
apps/stm32h753zi_stepper/boards/shields/: README_X_NUCLEO_IHM02A1.md
apps/stm32h753zi_stepper/docs/: hardware_notes.md  ihm02a1_integrated_evaluation.md
apps/stm32h753zi_stepper/docs/checkpoints/: 090325_1244PM.md
apps/stm32h753zi_stepper/reference/STM32CubeExpansion_SPN2_V1.1.1/: README.md  Release_Notes.html
apps/stm32h753zi_stepper/reference/User_Manuals/: UM1964-getting-started-with-xnucleoihm02a1-twoaxis-stepper-motor-driver-expansion-board-based-on-l6470-for-stm32-nucleo-stmicroelectronics.txt  um2407-stm32-nucleo-boards-stmicroelectronics.txt
apps/stm32h753zi_stepper/scripts/: calc_l6470.py  gen_stepper_models.py  validate_stepper_models.py
apps/stm32h753zi_stepper/smoke/persist/: CMakeLists.txt  nucleo_h753zi.overlay  prj.conf
apps/stm32h753zi_stepper/src/: hw_smoketest.c  l6470.c  l6470.h  l6470_codec.c  l6470_codec.h  main.c  persist.c  persist.c.bak  persist.h  shell_stepper.c  status_poll.c  status_poll.h  stepper_models.c  stepper_models.h
apps/stm32h753zi_stepper/tests/: CMakeLists.txt  test_l6470_codec.c  testcase.yaml
apps/stm32h753zi_stepper/tests/unit/: CMakeLists.txt  README.md  prj.conf  strict_spi_mock.c  test_l6470_apply_model.c  test_l6470_codec.c  test_l6470_limits.c  test_l6470_strict_frames.c  test_power_control.c  test_stepper_models.c  testcase.yaml
apps/stm32h753zi_stepper/tests/unit/test_helpers/: l6470_codec.c
docs/: STATUS.md
tools/: flash_try.py
twister-out/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out.1/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out.1/native_sim_native/host/stm32h753zi_stepper.unit/: build.ninja  run_id.txt
twister-out.10/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out.10/native_sim_native/host/stm32h753zi_stepper.unit/: build.ninja  run_id.txt
twister-out.11/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out.11/native_sim_native/host/stm32h753zi_stepper.unit/: build.ninja  run_id.txt
twister-out.12/: testplan.json  twister_report.xml
twister-out.12/native_sim_native/host/stm32h753zi_stepper.unit/: build.ninja  run_id.txt
twister-out.13/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out.13/native_sim_native/host/stm32h753zi_stepper.unit/: build.ninja  run_id.txt
twister-out.14/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out.14/native_sim_native/host/stm32h753zi_stepper.unit/: build.ninja  run_id.txt
twister-out.15/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out.15/native_sim_native/host/stm32h753zi_stepper.unit/: build.ninja  build_info.yml  run_id.txt  sysbuild_modules.txt
twister-out.16/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out.16/native_sim_native/host/stm32h753zi_stepper.unit/: build.ninja  run_id.txt
twister-out.17/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out.17/native_sim_native/host/stm32h753zi_stepper.unit/: build.ninja  run_id.txt
twister-out.18/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out.2/: testplan.json  twister.xml
twister-out.3/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out.4/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out.5/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out.6/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out.7/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out.8/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
twister-out.9/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
zephyr/: .envrc
(+117 files in other folders)
